Fixing misaligned footer

--- a/themes/terminal-custom/assets/css/footer.scss
+++ b/themes/terminal-custom/assets/css/footer.scss
@@ -4,7 +4,7 @@
   opacity: .5;
 
   &__inner {
-    display: flex;
+    // display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 0;
